--- a/src/main/resources/templates/respect-form.html
+++ b/src/main/resources/templates/respect-form.html
@@ -16,7 +16,7 @@
             th:src="@{/webjars/jquery-ui/1.9.2/js/jquery-ui-1.9.2.custom.min.js}" />
     <script type="text/javascript">
         $(function () {
-            $('#date').datepicker({ dateFormat: 'yy-mm-dd' });
+            $('#matchDate').datepicker({ dateFormat: 'yy-mm-dd' });
         });
     </script>
     <div class = "navbar navbar-inverse navbar-static-top">
@@ -138,7 +138,7 @@
                     </tr>
                     <tr>
                         <td><b>Date:*</b></td>
-                        <td><input name="date" id="date" type="text" class="form-control" required="required" /></td>
+                        <td><input name="matchDate" id="matchDate" type="text" class="form-control" required="required" /></td>
                     </tr>
                     <tr>
                         <td><b>Changing Facilities:*</b><br />
