--- a/src/main/resources/templates/respect-form.html
+++ b/src/main/resources/templates/respect-form.html
@@ -6,7 +6,7 @@
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
-    <link href="/static/css/general.css"
+    <link href="/css/general.css"
           th:href="@{/css/general.css}" rel="stylesheet" media="screen"/>
     <link href="https://cdn.jsdelivr.net/jquery.ui/1.11.4/jquery-ui.min.css"
           th:href="@{/webjars/jquery-ui/1.9.2/css/smoothness/jquery-ui-1.9.2.custom.min.css}" rel="stylesheet" media="screen"/>
@@ -29,10 +29,10 @@
 
             <div class="collapse navbar-collapse navHeaderCollapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="dashboard" class="navbar-brand">Dashboard</a></li>
-                    <li><a href="form" class="navbar-brand">Form</a></li>
+                    <li><a href="/dashboard" class="navbar-brand">Dashboard</a></li>
+                    <li><a href="/form" class="navbar-brand">Form</a></li>
                     <li th:if="${isAdmin}"><a href="admin" class="navbar-brand">Admin</a></li>
-                    <li><a href='logout' class="navbar-brand">Logout</a></li>
+                    <li><a href='/logout' class="navbar-brand">Logout</a></li>
                 </ul>
             </div>
         </div>
