--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -18,9 +18,9 @@
 
             <div class="collapse navbar-collapse navHeaderCollapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="dashboard" class="navbar-brand">Dashboard</a></li>
-                    <li><a href="completedForm" class="navbar-brand">Form</a></li>
-                    <li><a href='logout' class="navbar-brand">Logout</a></li>
+                    <li><a href="/dashboard" class="navbar-brand">Dashboard</a></li>
+                    <li><a href="/completedForm" class="navbar-brand">Form</a></li>
+                    <li><a href='/logout' class="navbar-brand">Logout</a></li>
                 </ul>
             </div>
         </div>
