--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,6 +5,6 @@
     <title>Error</title>
 </head>
 <body>
-    <h1>Error: Invalid Attribute/ID?</h1>
+    <h1>Error: Invalid Attribute/ID/URL</h1>
 </body>
 </html>
