--- a/src/main/resources/templates/overall-stats.html
+++ b/src/main/resources/templates/overall-stats.html
@@ -13,19 +13,21 @@
 </head>
 <body background="/img/paper_2.png">
     <div class="padded-table-body">
-        <h1 th:text="${competition.league.name} + ' - ' + ${competition.name}"></h1>
+        <h1 th:text="${overallScores.competitionAndOrLeagueName}"></h1>
         <h3>Average score for competition/division: <span th:text="${overallScores.competitionAverage}" /></h3>
         <table class="table table-bordered table-condensed">
             <thead>
                 <tr>
                     <th>Team Name</th>
                     <th>Average Score</th>
+                    <th>Num Reports</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="teamAverage : ${overallScores.teamAverages}">
-                    <td th:text="${teamAverage.key}" />
+                <tr th:each="teamAverage,index : ${overallScores.teamAverages}">
+                    <td> <a th:text="${teamAverage.key.name}" th:href="'/stats/team/' + ${teamAverage.key.id}"/> </td>
                     <td th:text="${teamAverage.value}" />
+                    <td th:text="${overallScores.teamReportNums('__${teamAverage.key.name}__')}" />
                 </tr>
             </tbody>
         </table>
