--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -18,8 +18,9 @@
 
             <div class="collapse navbar-collapse navHeaderCollapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/dashboard" class="navbar-brand">Dashboard</a></li>
-                    <li><a href="/completedForm" class="navbar-brand">Form</a></li>
+                    <li><a href="/form" class="navbar-brand">Form</a></li>
+                    <li><a href="/stats" class="navbar-brand">Stats</a></li>
+                    <li th:if="${admin}"><a href="/respect/admin/dashboard" class="navbar-brand">Admin</a></li>
                     <li><a href='/logout' class="navbar-brand">Logout</a></li>
                 </ul>
             </div>
