Moved header to a fragment

--- a/src/main/resources/templates/forbidden.html
+++ b/src/main/resources/templates/forbidden.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Forbidden</title>
+    <div th:replace="fragments/navigation-header :: nav-header" />
 </head>
 <body>
     <h1>
