--- a/src/main/resources/templates/fragments/navigation-header.html
+++ b/src/main/resources/templates/fragments/navigation-header.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse navHeaderCollapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/form" class="navbar-brand">Form</a></li>
-                <li><a href="/stats" class="navbar-brand">Stats</a></li>
+                <li><a th:if="${admin}" href="/stats" class="navbar-brand">Stats</a></li>
                 <li th:if="${admin}"><a href="/respect/admin/dashboard" class="navbar-brand">Admin</a></li>
                 <li><a href='/logout' class="navbar-brand">Logout</a></li>
             </ul>
