Added captain's liaison to stats

--- a/src/main/resources/templates/stats-table.html
+++ b/src/main/resources/templates/stats-table.html
@@ -21,7 +21,8 @@
             <a href="?statName=facilities">Facilities</a> /
             <a href="?statName=assistants">Assistants</a> /
             <a href="?statName=spectators">Spectators</a> /
-            <a href="?statName=hospitality">Hospitality</a>
+            <a href="?statName=hospitality">Hospitality</a> /
+            <a href="?statName=captain">Captain's Liaison</a>
         </div>
         <h3>Average <span th:text="${tableData.statName}" /> score for competition/division: <span th:text="${tableData.competitionAverage}" /></h3>
         <table class="table table-bordered table-condensed">
