Stats now selectable over date ranges

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -21,7 +21,7 @@
         <div>
             If you require assistance or have discovered a bug,
             please contact the site's admin, Jonathan Sterling, at
-            <b>JSterling8 -[-at-]- gmail -[-dot-]- com</b>.  Please let him
+            <b>Jon@thanCodes.com</b>.  Please let him
             know what you were doing when the issue occurred so he can
             attempt to reproduce the problem.
         </div>
