--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -33,3 +33,17 @@ label.radio {
 .red {
     color: red;
 }
+
+#stats-form {
+    display: flex;
+}
+
+#stats-form button {
+    margin-left: 5px;
+    height: 100%;
+}
+
+.label-spacer {
+    margin-left: 5px;
+    margin-right: 5px;
+}
