Added user account page.  Not implemented update function yet on the backend

--- a/src/main/resources/templates/fragments/navigation-header.html
+++ b/src/main/resources/templates/fragments/navigation-header.html
@@ -13,7 +13,7 @@
 
         <div class="collapse navbar-collapse navHeaderCollapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/my-reports" class="navbar-brand">My Reports</a></li>
+                <li><a href="/account" class="navbar-brand">My Account</a></li>
                 <li><a href="/form" class="navbar-brand">Form</a></li>
                 <li><a th:if="${admin}" href="/stats" class="navbar-brand">Stats</a></li>
                 <li th:if="${admin}"><a href="/respect/admin/dashboard" class="navbar-brand">Admin</a></li>
