--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -50,7 +50,7 @@
             <label for="confirm-password" class="sr-only">Confirm Password</label>
             <input type="password" id="confirm-password" name="confirmPassword" class="form-control" placeholder="Confirm Password" required="required" />
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     </form>
 
 </div> <!-- /container -->
