--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -47,3 +47,13 @@ label.radio {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+.super-padded {
+    margin-left: 40%;
+    margin-right: 40%;
+    text-align: center;
+}
+
+.table-account {
+    text-align: center;
+}
