--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -58,6 +58,33 @@ label.radio {
     text-align: center;
 }
 
+.sorta-padded {
+    margin-left: 35%;
+    margin-right: 35%;
+}
+
 .table-account {
     text-align: center;
+}
+
+.custom-checkbox {
+    -webkit-appearance: none;
+    width: 30px;
+    height: 30px;
+    background: white;
+    border-radius: 5px;
+    border: 2px solid #DDD;
+}
+
+.custom-checkbox:checked {
+    background: #777;
+}
+
+.td-checkbox {
+    text-align: right;
+    vertical-align: middle;
+}
+
+.register-table {
+    width: 100%;
 }
