--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,7 +16,7 @@
     <form class="form-signin horizontal" th:object="${accountCreationDto}" th:action="@{/register}" method="POST">
         <h2 class="form-signin-heading">Register</h2>
         <div th:if="${#fields.hasAnyErrors()}">
-            <p th:each="err : ${#fields.allErrors()}" th:text="${err}">...</p>
+            <p th:each="err : ${#fields.allErrors()}" th:text="${err}" class="error red">...</p>
         </div>
         <div class="form-group">
             <label for="first-name" class="sr-only">First Name</label>
@@ -50,6 +50,18 @@
             <label for="confirm-password" class="sr-only">Confirm Password</label>
             <input type="password" id="confirm-password" name="confirmPassword" class="form-control" placeholder="Confirm Password" required="required" />
         </div>
+        <table class="register-table">
+            <div class="form-group">
+                <tr>
+                    <td>
+                        <label for="remind">Receive weekly reminders to send in reports (Sundays at 17:00)</label>
+                    </td>
+                    <td class="td-checkbox">
+                        <input type="checkbox" id="remind" name="remind" class="custom-checkbox" />
+                    </td>
+                </tr>
+            </div>
+        </table>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     </form>
 
