--- a/src/main/resources/templates/user-account.html
+++ b/src/main/resources/templates/user-account.html
@@ -76,7 +76,7 @@
                 </tr>
             <tr>
                 <td colspan="2">
-                    <form action="/change-password" method="get">
+                    <form action="/account/change-password" method="get">
                         <button class="btn btn-lg btn-primary btn-block" type="submit">Change Password</button>
                     </form>
                 </td>
