Header now on login and register page

--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -13,7 +13,7 @@
     <div th:replace="fragments/navigation-header :: nav-header" />
 </head>
 <body background="/img/paper_2.png">
-    <form action="/account/change-password" method="post" class="super-padded">
+    <form action="/account/change-password" method="post" class="super-padded" th:object="${passwordUpdateDto}">
         <div th:if="${#fields.hasAnyErrors()}">
             <p th:each="err : ${#fields.allErrors()}" th:text="${err}" class="error red">...</p>
         </div>
