--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,6 +10,22 @@
           th:href="@{/css/general.css}" rel="stylesheet" media="screen"/>
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
             th:src="@{/webjars/jquery/2.2.1/jquery.min.js}"></script>
+    <div class = "navbar navbar-inverse navbar-static-top" th:fragment="nav-header">
+        <div class="container">
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <div class="collapse navbar-collapse navHeaderCollapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href='/login' class="navbar-brand">Login</a></li>
+                    <li><a href='/register' class="navbar-brand">Register</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </head>
 <body background="img/paper_2.png">
 <div class="col-sm-4 container float-center">
