Fixed form submission date bug.  Centered success text

--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -7,10 +7,12 @@
           th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
     <link href="../static/css/general.css"
-          th:href="@{css/respect-form.css}" rel="stylesheet" media="screen"/>
+          th:href="@{css/general.css}" rel="stylesheet" media="screen"/>
     <div th:replace="fragments/navigation-header :: nav-header" />
 </head>
 <body background="img/paper_2.png">
-    <h1>Successfully Submitted</h1>
+    <div id="center">
+        <h1>Successfully Submitted</h1>
+    </div>
 </body>
 </html>
