--- a/src/main/resources/templates/validation-email-resent.html
+++ b/src/main/resources/templates/validation-email-resent.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Success!</title>
+    <title>Validation Email Sent</title>
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
@@ -12,7 +12,7 @@
 </head>
 <body background="img/paper_2.png">
     <div id="center">
-        <h1>Successfully Submitted</h1>
+        <h1>Validation email resent.  Please double check your spam folder.</h1>
     </div>
 </body>
 </html>
