Fixed broken css links.  Styled incorrect validation page

--- a/src/main/resources/templates/validation-email-resent.html
+++ b/src/main/resources/templates/validation-email-resent.html
@@ -7,10 +7,10 @@
           th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
     <link href="../static/css/general.css"
-          th:href="@{css/general.css}" rel="stylesheet" media="screen"/>
+          th:href="@{/css/general.css}" rel="stylesheet" media="screen"/>
     <div th:replace="fragments/navigation-header :: nav-header" />
 </head>
-<body background="img/paper_2.png">
+<body background="/img/paper_2.png">
     <div id="center">
         <h1>Validation email resent.  Please double check your spam folder.</h1>
     </div>
