--- a/src/main/resources/templates/validation-error.html
+++ b/src/main/resources/templates/validation-error.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Validation Error</title>
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
+          rel="stylesheet" media="screen" />
+    <link href="../static/css/general.css"
+          th:href="@{/css/general.css}" rel="stylesheet" media="screen"/>
+    <div th:replace="fragments/navigation-header :: nav-header" />
 </head>
-<body>
-    <h1>
-        Error: Unable to find validation code.
-    </h1>
+<body background="/img/paper_2.png">
+<div id="center">
+    <h1>Error: Unable to find validation code.</h1>
+</div>
 </body>
 </html>
